Student_hub/Second.css
body{
	font-family: "Poppins", sans-serif;
}

section {
	margin-bottom: 5em;
	width: 100vw;
}


#student-cards-wrapper {
	margin: 0 3em 2em 1em;
	margin-right: 2em;
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	gap: 2em;
	padding: 2em 0 5em 0;
	align-items: stretch;
}

.student-card {
    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2);
    justify-content: space-between;
	padding: 1em;
	border: 1px solid var(--border-color);
	border-radius: 5px;
}

.student-card img {
	max-width: 100%;
	height: auto;
	margin-bottom: .5em;
	border-radius: 5px;
}

.student-card .iframe-wrapper {
	aspect-ratio: 16/9;
	margin-bottom: 1em;
}

.student-card iframe {
	border-radius: 5px;
	width: 100%;
	height: 100%;
}


.student-name {
    width: 300px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
	
	margin: 0 0 0 0;
	font-weight: bold;
	font-size: 20px;
	text-overflow: ellipsis;
	font-size: clamp(20px, 3vw, 24px);
}

.student-bio{
	margin-bottom: 0.5em;
	line-height: 1.4em;
	font-size: 16px;
	font-size: clamp(14px, 1.5vw, 16px);
}

.student-links {
    margin-top: 0.5em;
	margin-bottom: 0.5em;
	line-height: 1.4em;
	font-size: clamp(15px, 2vw, 17px);
}

.student-bio p {
	margin-top: 0.5em;
}
a {
    margin: .4em;
    text-decoration: none;
    font-size: 22px;
    color: black;
}
a:hover{
    color: #DC5F00;
}

.student-tech {
	background-color: #4242425e;
	width: fit-content;
	padding: 0.4em 1em;
	margin: 1em 0 .5em 0;
	border-radius: 1em;
	line-height: 1.5em;
}

.more-info-link:hover {
	background-color: #42424285;
}

